# wbt_opt

./: CMakeLists.txt  WBDC.out  model_config.h.cmake  package.xml  traj.out
include/: .gitignore  model_config.h  traj_solver.h  wbt_optimization.h  wbt_task.h
include/wbt/: optimization_constants.hpp  wbt_snopt_wrapper.hpp
include/wbt/contacts/: wbt_contact_leftfoot.hpp  wbt_contact_main.hpp  wbt_contact_rightfoot.hpp
include/wbt/containers/: wbt_constraint_list.hpp  wbt_contact_list.hpp  wbt_keyframe_list.hpp  wbt_opt_variable.hpp  wbt_opt_variable_list.hpp  wbt_wholebody_task_list.hpp
include/wbt/hard_constraints/: wbt_constraint_main.hpp  wbt_contact_lcp_constraint.hpp  wbt_contact_wrench_constraint.hpp  wbt_task_reaction_force_lcp_constraint.hpp  wbt_time_integration_constraint.hpp  wbt_wholebody_controller_constraint.hpp
include/wbt/objective_functions/: objective_function_main.hpp  objective_function_wbc_simple.hpp
include/wbt/optimization_problems/: wbt_opt_problem_main.hpp  wbt_opt_problem_wbdc.hpp  wbt_opt_problem_wbdc_time_integrate.hpp
include/wbt/soft_constraints/: wbt_contact_soft_constraint.hpp  wbt_keyframe.hpp  wbt_keyframe_orientation.hpp  wbt_keyframe_position.hpp
include/wbt/tasks/: wbt_task_com.hpp  wbt_task_leftfoot.hpp  wbt_task_main.hpp  wbt_task_rightfoot.hpp  wbt_task_rightfoot_righthand.hpp
include/wbt/tests/: snopt_wrapper_test.hpp
src/: implementation_plan.txt  main.cpp  optimization_obj.txt  traj_solver.cpp  wbt_optimization.cpp  wbt_task.cpp
src/draco_dynamic_model/: DracoP1Rot_Definition.h  Draco_Kin_Model.hpp
src/valkyrie_dynamic_model/: RobotModel.cpp  RobotModel.hpp  Valkyrie_Dyn_Model.cpp  Valkyrie_Dyn_Model.hpp  Valkyrie_Kin_Model.cpp  Valkyrie_Kin_Model.hpp  valkyrie_definition.h
src/valkyrie_dynamic_model/Valkyrie_urdf/: r5_urdf_rbdl.urdf
src/wbt_src/: main.cpp  main_opt_problem.cpp  snopt_wrapper_test.cpp  snopt_wrapper_test_main.cpp  wbt_opt_variable.cpp  wbt_snopt_wrapper.cpp
src/wbt_src/contacts/: wbt_contact_leftfoot.cpp  wbt_contact_rightfoot.cpp
src/wbt_src/containers/: wbt_constraint_list.cpp  wbt_contact_list.cpp  wbt_keyframe_list.cpp  wbt_opt_variable.cpp  wbt_opt_variable_list.cpp  wbt_wholebody_task_list.cpp
src/wbt_src/hard_constraints/: wbt_constraint_main.cpp  wbt_contact_lcp_constraint.cpp  wbt_contact_wrench_constraint.cpp  wbt_task_reaction_force_lcp_constraint.cpp  wbt_wholebody_controller_constraint.cpp
src/wbt_src/objective_functions/: objective_function_wbc_simple.cpp
src/wbt_src/optimization_problems/: wbt_opt_problem_wbdc.cpp  wbt_opt_problem_wbdc_time_integrate.cpp
src/wbt_src/soft_constraints/: wbt_keyframe_orientation.cpp  wbt_keyframe_position.cpp
src/wbt_src/tasks/: wbt_task_com.cpp  wbt_task_leftfoot.cpp  wbt_task_rightfoot.cpp  wbt_task_rightfoot_righthand.cpp
src/wbt_src/tests/: snopt_wrapper_test.cpp  snopt_wrapper_test_main.cpp
